--- a/index.html
+++ b/index.html
@@ -167,28 +167,28 @@
         </div>
         <div class="medias-logos">
           <span class="img">
-            <img src="./assets/img/figaro.png" alt="le figaro">
+            <img src="../assets/img/figaro.png" alt="le figaro">
           </span>
           <span class="img">
-            <img src="./assets/img/challenges.png" alt="challenges">
+            <img src="../assets/img/challenges.png" alt="challenges">
           </span>
           <span class="img">
-            <img src="./assets/img/leparisien.png" alt="le parisien">
+            <img src="../assets/img/leparisien.png" alt="le parisien">
           </span>
           <span class="img">
-            <img src="./assets/img/lemonde.png" alt="le monde">
+            <img src="../assets/img/lemonde.png" alt="le monde">
           </span>
           <span class="img">
-            <img src="./assets/img/progres.png" alt="le progrès">
+            <img src="../assets/img/progres.png" alt="le progrès">
           </span>
           <span class="img">
-            <img src="./assets/img/echos.png" alt="les echos">
+            <img src="../assets/img/echos.png" alt="les echos">
           </span>
           <span class="img">
-            <img src="./assets/img/bfm.png" alt="BFM tv">
+            <img src="../assets/img/bfm.png" alt="BFM tv">
           </span>
           <span class="img">
-            <img src="./assets/img/lepoint.png" alt="l'équipe">
+            <img src="../assets/img/lepoint.png" alt="l'équipe">
           </span>
           <div class="img">
           </div>
@@ -198,16 +198,16 @@
   <footer>
     <h3>partenaires officiels</h3>
     <ul>
-      <li><img src="./assets/img/apollo.png" alt="apollo"></li>
-      <li><img src="./assets/img/chiliz.png" alt="chiliz"></li>
-      <li><img src="./assets/img/omen.png" alt="omen"></li>
-      <li><img src="./assets/img/joa.png" alt="joa"></li>
-      <li><img src="./assets/img/zol.png" alt="zol"></li>
-      <li><img src="./assets/img/maxonomic.png" alt="maxndmic"></li>
-      <li><img src="./assets/img/credit-mutuel.png" alt="credit mutuel"></li>
-      <li><img src="./assets/img/talent-web.png" alt="TW"></li>
-      <li><img src="./assets/img/ubisoft.png" alt="ubisoft"></li>
-      <li><img src="./assets/img/vitality.png" alt="vitality"></li>
+      <li><img src="../assets/img/apollo.png" alt="apollo"></li>
+      <li><img src="../assets/img/chiliz.png" alt="chiliz"></li>
+      <li><img src="../assets/img/omen.png" alt="omen"></li>
+      <li><img src="../assets/img/joa.png" alt="joa"></li>
+      <li><img src="../assets/img/zol.png" alt="zol"></li>
+      <li><img src="../assets/img/maxonomic.png" alt="maxndmic"></li>
+      <li><img src="../assets/img/credit-mutuel.png" alt="credit mutuel"></li>
+      <li><img src="../assets/img/talent-web.png" alt="TW"></li>
+      <li><img src="../assets/img/ubisoft.png" alt="ubisoft"></li>
+      <li><img src="../assets/img/vitality.png" alt="vitality"></li>
     </ul>
   </footer>
 
